[workspace]
resolver = "2"

members = [
	"tuple-traits",
]

[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"

# https://doc.rust-lang.org/rustc/linker-plugin-lto.html
lto = "fat"
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1
